Fix material description overflow bug

--- a/front-end/app/styles/_layout.scss
+++ b/front-end/app/styles/_layout.scss
@@ -25,6 +25,10 @@
 
 }
 
+.flex{
+  -ms-flex: auto;
+}
+
 // .scrollable-content-container.nav-open  {
 //   -webkit-box-align: flex-start;
 //   -webkit-align-items: flex-start;
